// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableRow /> ref should work 1`] = `
<tr
  class="poodle-box poodle-table-row c0"
>
  <td>
    TableRow
  </td>
</tr>
`;

exports[`<TableRow /> should render Box props correctly 1`] = `
.c0 {
  margin-top: 20px;
}

<table>
  <tbody>
    <tr
      class="poodle-box poodle-table-row c0"
      id="id"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> should render TableRow correctly 1`] = `
<table>
  <tbody>
    <tr
      class="poodle-box poodle-table-row c0"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> should render props isSelected correctly 1`] = `
<table>
  <tbody>
    <tr
      class="poodle-box poodle-table-row c0"
      data-selected="true"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should extend size styles 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  height: 100px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody>
      <tr
        class="poodle-box poodle-table-row c2"
      >
        <td>
          TableRow
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableRow /> theming should extend size styles with mode 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  height: 100px;
  height: 110px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody>
      <tr
        class="poodle-box poodle-table-row c2"
      >
        <td>
          TableRow
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableRow /> theming should extend styles in global 1`] = `
.c0 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody>
    <tr
      class="poodle-box poodle-table-row c0"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should extend styles in local 1`] = `
.c0 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody>
    <tr
      class="poodle-box poodle-table-row c0"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<table>
  <tbody>
    <tr
      class="poodle-box poodle-table-row c0"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableRow /> theming should render with default props correctly 1`] = `
<table>
  <tbody>
    <tr
      class="poodle-box poodle-table-row hello c0"
      id="id"
    >
      <td>
        TableRow
      </td>
    </tr>
  </tbody>
</table>
`;
